# electronic-common

./: .gitmodules  CMakeLists-ignore.txt  CMakeLists.txt  README.md
cmake/: ignore.txt  parameters.example.txt
com/osteres/automation/: Application.cpp  Application.h
com/osteres/automation/action/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  ActionManagerBase.cpp  ActionManagerBase.h
com/osteres/automation/action/implement/: ConsoleDisplayPacket.h
com/osteres/automation/action/implement/packet/: ResponseOkAction.h
com/osteres/automation/memory/: Property.cpp  Property.h  TimedProperty.h  Value.cpp  Value.h  ValueBase.cpp  ValueBase.h
com/osteres/automation/mock/: RF24.h
com/osteres/automation/polyfill/: delay.h  millis.h
com/osteres/automation/proxy/: RF24.h
com/osteres/automation/sample/: SampleApplication.h
com/osteres/automation/sensor/: IDGenerator.cpp  IDGenerator.h  Identity.cpp  Identity.h  Packet.cpp  Packet.h  PacketCommand.cpp  PacketCommand.h  Sensor.cpp  Sensor.h  Transmitter.cpp  Transmitter.h
com/osteres/automation/sensor/hall/: Reader.cpp  Reader.h
com/osteres/automation/transmission/: Packing.h  Receiver.cpp  Receiver.h  Requester.cpp  Requester.h  Transmitter.cpp  Transmitter.h
com/osteres/automation/transmission/packet/: Command.cpp  Command.h  CommandString.h  Packet.cpp  Packet.h
com/osteres/util/: Arduino.cpp  Arduino.h  IDGenerator.cpp  IDGenerator.h
com/osteres/util/formatter/: Number.cpp  Number.h
